Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2 class="section-title">Sobre Mim</h2>
       <div class="sobre-content">
         <div class="foto">
-          <i class="fas fa-laptop-code fa-5x"></i> <!-- Ícone de programador -->
+          <i class="fas fa-laptop-code fa-5x"></i>
         </div>
         <div class="descricao">
           <p>Olá! Eu sou um programador apaixonado por tecnologia e inovação. Meu objetivo é criar soluções que impactem positivamente as pessoas e os negócios. Com experiência em backend, front-end e desenvolvimento de APIs, estou sempre aprendendo e buscando evoluir nas mais diversas tecnologias!</p>
@@ -101,7 +101,7 @@
     <div class="container">
       <div class="footer-content">
         <p style="text-align: center;">&copy; 2024 Meu Portfólio. Todos os direitos reservados.</p>
-        <p style="text-align: center;">Feito com <i class="fas fa-heart"></i> por [Seu Nome]</p>
+        <p style="text-align: center;">Feito com <i class="fas fa-heart"></i> por Gabriel Souza</p>
       </div>
     </div>
   </footer>
