--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <div class="contato">
         <p style="text-align: center;">Você pode me encontrar nas redes sociais ou entrar em contato comigo diretamente!</p>
         <div class="social-links">
-          <a href="https://github.com/seu-usuario" target="_blank" class="social-link github"><i class="fab fa-github"></i> GitHub</a>
-          <a href="https://www.linkedin.com/in/seu-usuario" target="_blank" class="social-link linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          <a href="https://github.com/sGabDev" target="_blank" class="social-link github"><i class="fab fa-github"></i> GitHub</a>
+          <a href="https://www.linkedin.com/" target="_blank" class="social-link linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
         </div>
       </div>
     </div>
